# shop-management-service

./: .env.example  .gitignore  DockerFile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: urls.py
api/products/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
api/products/management/commands/: init_data.py
api/products/migrations/: 0001_initial.py  0002_auto_20250329_0600.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py
mysql/init/: 01-grant-test-permissions.sql
