[tool.poetry]
name = "shop-management-service"
version = "0.1.0"
description = ""
authors = ["ppakyeah <dpwls159966@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.21,<3.10"
django = "3.0.11"
djangorestframework = "<3.12"
django-environ = ">=0.12.0,<0.13.0"
django-filter = "<21.0"
django-extensions = "<3.2"
mysqlclient = ">=2.2.7,<3.0.0"
drf-spectacular = "^0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
